src/components/VideoDetails/VideoDetails.css
.video-details-container {
    min-height: '95vh';
    /* background-color: aqua; */
    display: flex;
    padding: 0;
    margin: 0;
}

@media screen and (max-width: 950px) {
    .video-details-container {
        flex-direction: column
    }
}

.upper {
    height: 92vh;
    flex: 0.8;
    background-color: rgb(40, 37, 38);
    z-index: 1;

}
.upper-content{
    height:600px;
}

@media screen and (max-width: 950px) {
    .upper {
        height: 300px;
    }
    .upper-content{
        height: 300px;
    }
}

.video-player{
    height: 400px;
}
.video-title {
    font-size: 20px;
    margin-top: 20px;
    margin-left: 20px;
}
@media screen and (max-width: 950px) {
    .video-title {
        font-size: 15px;
    }
    .video-player{
        height: 200px;
    }

}


.channel-title {
    color: gray;
    margin-top: 20px;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-left: 20px;
}

.channel-title h6 {
    font-size: 15px;
}

.view {
    margin-top: 20px;
    color: #fff;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-left: 20px;
}

.like {
    margin-top: 20px;
    color: #fff;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-left: 20px;
}

.lower {
    background-color: #0c0c0c;
    flex:0.4 ;
}

@media screen and (max-width: 950px) {
    .video-title{
        margin-top: 5px;
    }
   .channel-title {
    margin-top: 5px;
   }
    .view{
    margin-top: 5px;
   }
   .like{
    margin-top: 5px;
   }
   

}

